--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -72,7 +72,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: 28%;
+        width: 30%;
         height: 98px;
         background: linear-gradient(-122.91deg, rgba(28, 27, 25, 0.35) 0%, rgba(79, 79, 79, 0.12) 63.735%, rgba(79, 79, 79, 0.35) 101.167%);
         clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0% 100%);
@@ -152,6 +152,7 @@
         display: flex;
         align-items: center;
         gap: 30px;
+        width: 25%;
 
         &_link {
             font-size: 32px;
@@ -168,6 +169,7 @@
     }
 
     &__menu {
+        width: 50%;
 
         @include netbook {
             visibility: hidden;
@@ -294,6 +296,36 @@
 
         &_img {
             width: 40px;
+        }
+    }
+
+    &__actions {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 10px;
+        width: 25%;
+
+        &_link {
+            display: flex;
+            width: 24px;
+            height: 24px;
+
+            &:hover {
+                img {
+                    filter: brightness(10);
+                }
+            }
+        }
+
+        &_admin {
+            width: 46px;
+            height: 46px;
+            border-radius: 50%;
+            border: 2px solid #44403E;
+            background: lightgray 50% / cover no-repeat;
+            overflow: hidden;
+            margin-left: 10px;
         }
     }
 }
