--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -29,25 +29,22 @@
                     <a href="#" class="header__menu_item">Карта лояльности</a>
                 </div>
             </div>
-            <div class="header__lang">
-                <button type="button" class="header__lang_button">
-                    <img class="header__lang_img" src="assets/images/ru.svg" alt="">
-                    <div class="header__lang_dots">
-                        <svg width="5" height="21" viewBox="0 0 5 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="2.5" cy="2.5" r="2.5" fill="#D9D9D9" />
-                            <circle cx="2.5" cy="10.5" r="2.5" fill="#D9D9D9" />
-                            <circle cx="2.5" cy="18.5" r="2.5" fill="#D9D9D9" />
-                        </svg>
-                    </div>
-                </button>
-                <div class="header__lang_dropdown">
-                    <a href="#" class="header__lang_link">
-                        <img class="header__lang_img" src="assets/images/en.svg" alt="">
-                    </a>
-                    <a href="#" class="header__lang_link">
-                        <img class="header__lang_img" src="assets/images/uk.svg" alt="">
-                    </a>
-                </div>
+            <div class="header__actions">
+                <a href="#" class="header__actions_link">
+                    <img src="../assets/images/icons/search-normal.svg" alt="">
+                </a>
+                <a href="#" class="header__actions_link">
+                    <img src="../assets/images/icons/messages.svg" alt="">
+                </a>
+                <a href="#" class="header__actions_link">
+                    <img src="../assets/images/icons/empty-wallet-add.svg" alt="">
+                </a>
+                <a href="#" class="header__actions_link">
+                    <img src="../assets/images/icons/bag-2.svg" alt="">
+                </a>
+                <a href="#" class="header__actions_admin">
+                    <img src="../assets/images/home/card-image.png" alt="">
+                </a>
             </div>
         </div>
     </div>
