--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -23,10 +23,10 @@
             </div>
             <div class="header__menu js-hamburger-menu">
                 <div class="header__menu_block">
-                    <a href="main.html" class="header__menu_item active">Главная</a>
+                    <a href="index.html" class="header__menu_item active">Главная</a>
                     <a href="catalog.html" class="header__menu_item">Каталог</a>
                     <a href="cart.html" class="header__menu_item">Информация</a>
-                    <a href="index.html" class="header__menu_item">Карта лояльности</a>
+                    <a href="vpn.html" class="header__menu_item">Карта лояльности</a>
                 </div>
             </div>
             <div class="header__actions">
