--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -1,6 +1,5 @@
 .home-slider {
     margin-top: 40px;
-    padding-bottom: 20px;
     background: rgb(28, 27, 25);
 
     &__block {
@@ -213,8 +212,8 @@
 }
 
 .game-slider {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    margin-top: 30px;
+    padding-bottom: 15px;
 
     &__block {
         width: 100%;
@@ -280,10 +279,11 @@
 }
 
 .home-statics {
-    margin-top: 40px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 35px;
+    padding-bottom: 50px;
     background: rgb(26, 25, 23);
+    border-top: 2px solid #252221;
+    border-bottom: 2px solid #252221;
 
     &__title {
         text-align: center;
@@ -317,12 +317,12 @@
 }
 
 .home-markets {
-    margin-top: 40px;
     padding-top: 40px;
     padding-bottom: 40px;
     background: rgb(26, 25, 23);
     position: relative;
     overflow: hidden;
+    border-top: 2px solid #252221;
 
     &::after {
         content: "";
