--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -250,6 +250,79 @@
     }
 }
 
+.fixed-card {
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 20;
+    top: 115px;
+    width: 100%;
+    opacity: 0;
+    visibility: hidden;
+    transition: 100ms ease;
+
+    &.active {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    &__img {
+        width: 100%;
+        max-width: 192px;
+        height: 94px;
+        display: flex;
+        border-radius: 10px;
+        overflow: hidden;
+
+        &_item {
+            object-fit: cover;
+        }
+    }
+
+    &__block {
+        padding: 10px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        border-radius: 10px;
+        border: 1px solid #34312D;
+        background: rgba(26, 25, 23, 0.65);
+        backdrop-filter: blur(4.25px);
+    }
+
+    &__action {
+        width: 100%;
+        max-width: 385px;
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+    }
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    &__name {
+        font-size: 32px;
+        color: white;
+        font-weight: 700;
+        line-height: 1.1;
+    }
+
+    &__text {
+        font-size: 12px;
+        color: $text-dark;
+    }
+
+    .cart-item__img_offer,
+    .cart-item__img_buynow {
+        margin: 0;
+    }
+}
+
 .cart-table {
     display: flex;
     flex-direction: column;
