--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -1,13 +1,14 @@
 .header {
     position: fixed;
     width: 100%;
-    height: 100px;
+    height: 63px;
     display: flex;
     align-items: center;
     top: 0;
     z-index: 10;
     background-color: $dark;
-    border-bottom: 1px solid #2C2C2A;
+    border-bottom: 1px solid #1C1B19;
+    box-shadow: 0px 0px 22.2px -3px #282620 inset, 0px 9px 11.8px -3px rgba(0, 0, 0, 0.25);
 
     &::after {
         content: "";
@@ -25,10 +26,11 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 25%;
-        height: 98px;
-        background: linear-gradient(91deg, rgba(28, 27, 25, 0.35) -0.04%, rgba(79, 79, 79, 0.12) 63.67%, rgba(79, 79, 79, 0.35) 101.08%);
-        clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
+        width: 22%;
+        min-width: 260px;
+        height: 63px;
+        background: linear-gradient(91deg, #1C1B19 -0.04%, #2E2920 109.69%);
+        clip-path: polygon(0 0, 88% 0, 100% 100%, 0% 100%);
 
         @include mobile {
             width: 70%;
@@ -39,9 +41,10 @@
         position: absolute;
         bottom: 0;
         left: 0;
-        width: 25%;
-        height: 22px;
-        background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.35) -0.348%, rgba(255, 108, 61, 0.35) 100%);
+        width: 22%;
+        min-width: 260px;
+        height: 15px;
+        background: linear-gradient(90deg, rgba(135, 61, 37, 0.35) -0.17%, rgba(255, 108, 61, 0.35) 48.02%);
         clip-path: polygon(0 0, 0 0, 100% 100%, 0% 100%);
 
         @include mobile {
@@ -52,10 +55,11 @@
 
     &__shape-3 {
         position: absolute;
-        bottom: -24px;
+        bottom: -16px;
         left: 0;
-        width: 25%;
-        height: 22px;
+        width: 22%;
+        min-width: 260px;
+        height: 15px;
         background: linear-gradient(157.72deg, rgba(135, 61, 37, 0.11) -0.323%, rgba(255, 108, 61, 0.11) 92.563%);
         clip-path: polygon(0 0, 100% 0, 0 100%, 0% 100%);
 
@@ -72,10 +76,11 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: 25%;
-        height: 98px;
-        background: linear-gradient(-122.91deg, rgba(28, 27, 25, 0.35) 0%, rgba(79, 79, 79, 0.12) 63.735%, rgba(79, 79, 79, 0.35) 101.167%);
-        clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0% 100%);
+        width: 22%;
+        min-width: 260px;
+        height: 63px;
+        background: linear-gradient(180deg, #1C1B19 -0.04%, #2E2920 109.69%);
+        clip-path: polygon(12% 0, 100% 0%, 100% 100%, 0% 100%);
 
         @include mobile {
             display: none;
@@ -86,9 +91,10 @@
         position: absolute;
         bottom: 0;
         right: 0;
-        width: 25%;
-        height: 22px;
-        background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.35) -0.348%, rgba(255, 108, 61, 0.35) 100%);
+        width: 22%;
+        min-width: 260px;
+        height: 15px;
+        background: linear-gradient(180deg, rgba(135, 61, 37, 0.35) -0.17%, rgba(255, 108, 61, 0.35) 48.02%);
         clip-path: polygon(100% 0, 100% 100%, 0 100%, 0% 100%);
 
         @include mobile {
@@ -98,42 +104,13 @@
 
     &__shape-6 {
         position: absolute;
-        bottom: -24px;
+        bottom: -16px;
         right: 0;
-        width: 25%;
-        height: 22px;
+        width: 22%;
+        min-width: 260px;
+        height: 15px;
         background: linear-gradient(157.72deg, rgba(135, 61, 37, 0.11) -0.323%, rgba(255, 108, 61, 0.11) 92.563%);
         clip-path: polygon(100% 0, 100% 100%, 0 0, 0 0);
-
-        @include mobile {
-            display: none;
-        }
-    }
-
-    &__circle-1 {
-        width: 340px;
-        height: 340px;
-        position: absolute;
-        top: -130px;
-        left: 0;
-        filter: blur(500px);
-        background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.45) -88.391%, rgba(255, 108, 61, 0.45) 99.995%);
-        border-radius: 50%;
-
-        @include mobile {
-            display: none;
-        }
-    }
-
-    &__circle-2 {
-        width: 340px;
-        height: 340px;
-        position: absolute;
-        top: -130px;
-        right: 0;
-        filter: blur(500px);
-        background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.45) -88.391%, rgba(255, 108, 61, 0.45) 99.995%);
-        border-radius: 50%;
 
         @include mobile {
             display: none;
@@ -151,8 +128,8 @@
     &__logo {
         display: flex;
         align-items: center;
-        gap: 18px;
-        width: 25%;
+        gap: 30px;
+        width: 20%;
 
         &_link {
             width: 113px;
@@ -195,7 +172,7 @@
     }
 
     &__menu {
-        width: 50%;
+        width: 60%;
 
         @include netbook {
             visibility: hidden;
@@ -217,8 +194,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 30px;
-            /* margin-right: 10%; */
+            gap: 0px;
 
             @include netbook {
                 display: flex;
@@ -235,17 +211,77 @@
         }
 
         &_item {
-            font-size: 20px;
-            padding: 35px 0;
             position: relative;
             display: flex;
-            justify-content: center;
+            align-items: center;
+            gap: 8px;
+            font-family: $font-roboto;
+            height: 62px;
+            padding: 0 15px;
+            background: transparent;
+            border-bottom: 1px solid transparent;
+            transition: 200ms ease;
+            overflow: hidden;
+
+            &::after {
+                content: "";
+                display: inline-block;
+                width: 50%;
+                height: 20px;
+                background: transparent;
+                border-radius: 50%;
+                position: absolute;
+                bottom: -10px;
+                left: 50%;
+                transform: translateX(-50%);
+                filter: blur(15px);
+            }
+
+            &_svg {}
+
+            &_text {
+                display: flex;
+                flex-direction: column;
+                line-height: 1;
+                position: relative;
+                z-index: 2;
+            }
+
+            &_title {
+                font-size: 16px;
+                font-weight: 500;
+                color: #C3B8A2;
+                transition: 200ms ease;
+            }
+
+            &_subtitle {
+                font-size: 10px;
+                font-weight: 300;
+                color: #6D675B;
+            }
+
+            &:hover {
+                border-bottom-color: $orange;
+                background: linear-gradient(0deg, #1C1B19, #3C3832);
+
+                .svg-active {
+                    fill: white;
+                }
+
+                .header__menu_item_title {
+                    color: white;
+                }
+
+                &::after {
+                    background: $orange;
+                }
+            }
 
             @include mobile {
                 width: 100%;
             }
 
-            &::after {
+            /* &::after {
                 content: "";
                 width: 43px;
                 height: 2px;
@@ -256,16 +292,16 @@
                 border-radius: 2px;
                 background-color: transparent;
                 transition: 300ms ease;
-            }
+            } */
 
-            &:hover::after,
+            /* &:hover::after,
             &.active::after {
                 background-color: $orange;
 
                 @include mobile {
                     background-color: transparent;
                 }
-            }
+            } */
 
             &.active {
                 color: white;
@@ -368,7 +404,7 @@
         align-items: center;
         justify-content: flex-end;
         gap: 10px;
-        width: 25%;
+        width: 20%;
 
         &_block {
             display: flex;
@@ -412,9 +448,9 @@
         }
 
         &_admin {
-            width: 46px;
-            height: 46px;
-            border-radius: 50%;
+            width: 42px;
+            height: 42px;
+            border-radius: 8px;
             border: 2px solid #44403E;
             background: lightgray 50% / cover no-repeat;
             overflow: hidden;
