--- a/src/assets/scss/pages/_steam.scss
+++ b/src/assets/scss/pages/_steam.scss
@@ -120,7 +120,7 @@
         display: grid;
         grid-template-columns: 49% 49%;
         grid-template-rows: auto auto;
-        gap: 2%;
+        gap: 30px 2%;
         grid-template-areas:
             "bonus advantages"
             "bonus discount"
@@ -311,13 +311,15 @@
     grid-area: bonus;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: flex-start;
-    gap: 10px;
+    gap: 20px;
+    height: 210px;
 
     &__title {
         height: auto;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
 
 
         &_bonus {
@@ -344,15 +346,70 @@
     &__slider {
         display: flex;
         width: 100%;
-        padding: 20px 10px 0;
+        padding: 0 50px;
         border-radius: 10px;
         background: #191917;
         box-shadow: 0px -31px 42.6px -26px rgba(0, 0, 0, 0.25);
+
+        .swiper {
+            position: relative;
+            top: -20px;
+            height: max-content;
+        }
+
+        .swiper-button-next:after,
+        .swiper-button-prev:after {
+            display: none;
+        }
+
+        .swiper-button-next,
+        .swiper-button-prev {
+            position: absolute;
+        }
+
+        .swiper-button-prev {
+            top: 50%;
+            transform: translateY(-70%);
+            left: 10px;
+        }
+
+        .swiper-button-next {
+            top: 50%;
+            transform: translateY(-70%);
+            right: 10px;
+        }
+
+        .swiper-button-next.swiper-button-disabled,
+        .swiper-button-prev.swiper-button-disabled {
+            filter: brightness(0.8);
+        }
+
+        .swiper-line {
+            border-radius: 3.5px;
+            background: #282725;
+            width: 100%;
+            height: 6px;
+            position: absolute;
+            left: 0;
+            bottom: 39px;
+            display: flex;
+
+            &__color {
+                top: 0;
+                left: 0;
+                position: absolute;
+                width: auto;
+                height: 100%;
+                border-radius: 3.5px;
+                background: linear-gradient(90deg, #FF6C3D 84.07%, rgba(153, 65, 37, 0.00) 100%);
+                transition: width 300ms ease-in-out;
+            }
+        }
     }
 
     &__border {
         width: 100%;
-        height: 50%;
+        height: 111px;
         border: 1px solid transparent;
         background: linear-gradient(180deg, #1A1917 0%, #262724 100%) padding-box, linear-gradient(to bottom, #ffffff00 4%, #D6B13A) border-box;
         position: relative;
@@ -365,6 +422,16 @@
         flex-direction: column;
         align-items: center;
         gap: 10px;
+
+        &._active {
+            .steam-bonus__img_item {
+                filter: none;
+            }
+
+            .steam-bonus__open {
+                display: flex;
+            }
+        }
     }
 
     &__img {
@@ -391,6 +458,7 @@
         border: 1.2px solid #33302D;
         background: linear-gradient(142deg, rgba(52, 45, 39, 0.71) 0%, rgba(34, 34, 32, 0.71) 67.95%);
         backdrop-filter: blur(6.349999904632568px);
+        display: none;
     }
 
     &__dot {
