--- a/src/assets/scss/pages/_steam.scss
+++ b/src/assets/scss/pages/_steam.scss
@@ -111,10 +111,10 @@
     }
 }
 
-
-
 .steam-actions {
-    padding: 40px 0;
+    margin-bottom: 40px;
+    position: relative;
+    z-index: 1;
 
     &__block {
         display: grid;
@@ -498,5 +498,119 @@
         display: flex;
         align-items: flex-end;
         justify-content: center;
+    }
+}
+
+.steam-login {
+    margin: 40px 0;
+
+    &__block {
+        display: flex;
+        gap: 20px;
+    }
+
+    &__form {
+        border-radius: 10px;
+        background: #1A1917;
+        padding: 10px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        &_group {
+            position: relative;
+
+            &:hover {
+                .steam-login__form_svg path {
+                    fill: #D6B13A;
+                }
+            }
+        }
+
+        &_input {
+            padding: 18px 20px;
+            padding-left: 50px;
+            border-radius: 6px;
+            border: 1px solid #34312D;
+            background: #1C1B19;
+        }
+
+        &_btn {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            border-radius: 4px;
+            font-size: 12px;
+            background: #282725;
+            padding: 8px 25px;
+            color: $text-dark;
+            border: 1px solid transparent;
+            transition: 300ms ease;
+
+            &:hover {
+                color: white;
+                border: 1px solid $orange;
+            }
+        }
+
+        &_svg {
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        &_subtitle {
+            font-size: 13px;
+            color: $text-dark;
+            line-height: 1;
+        }
+
+        &_select {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-top: 0px;
+            margin-bottom: 10px;
+        }
+
+        &_radio {
+            margin: 0;
+            width: 100%;
+
+            input {
+                display: none;
+
+                &:checked~span {
+                    color: white;
+                    border-color: $orange;
+                }
+            }
+
+            span {
+                display: flex;
+                justify-content: center;
+                font-size: 12px;
+                color: $text-dark;
+                border-radius: 3px;
+                padding: 15px 30px;
+                border: 1.2px solid #33302D;
+                background: linear-gradient(142deg, #342D27 0%, #222220 67.95%);
+                transition: 300ms ease;
+                cursor: pointer;
+
+                &:hover {
+                    color: white;
+                    border-color: $orange;
+                }
+            }
+        }
+    }
+
+    &__info {
+        width: 100%;
+        max-width: 403px;
     }
 }
