--- a/src/assets/scss/pages/_steam.scss
+++ b/src/assets/scss/pages/_steam.scss
@@ -61,6 +61,10 @@
             position: relative;
             display: flex;
             justify-content: space-between;
+
+            @include mobile {
+                flex-direction: column;
+            }
         }
 
         &_title {
@@ -70,6 +74,15 @@
             flex-direction: column;
             gap: 5px;
             line-height: 1;
+
+            order: 1;
+
+            @include mobile {
+                order: 2;
+                width: 100%;
+                text-align: center;
+                margin-bottom: 20px;
+            }
 
             &_main {
                 color: #615447;
@@ -88,6 +101,13 @@
             max-width: 460px;
             position: relative;
 
+            order: 2;
+
+            @include mobile {
+                order: 1;
+                height: 55px;
+            }
+
             &_item {
                 width: 100%;
                 position: absolute;
@@ -101,6 +121,13 @@
             align-items: center;
             justify-content: flex-end;
             gap: 8px;
+
+            order: 3;
+
+            @include mobile {
+                width: 100%;
+                justify-content: center;
+            }
         }
 
     }
@@ -123,7 +150,15 @@
         gap: 30px 2%;
         grid-template-areas:
             "bonus advantages"
-            "bonus discount"
+            "bonus discount";
+
+        @include netbook {
+            grid-template-columns: 100%;
+            grid-template-areas:
+                "advantages"
+                "bonus"
+                "discount";
+        }
     }
 }
 
@@ -132,6 +167,10 @@
     display: flex;
     gap: 10px;
     grid-area: advantages;
+
+    @include mobile {
+        flex-direction: column;
+    }
 
     &__card {
         width: 100%;
@@ -317,9 +356,24 @@
     height: 210px;
 
     &__title {
+        width: 100%;
         height: auto;
         display: flex;
-        align-items: flex-start;
+        align-items: center;
+
+        &_text {
+            display: none;
+            font-size: 14px;
+            color: $text-dark;
+
+            @include mobile {
+                display: flex;
+            }
+        }
+
+        @include mobile {
+            justify-content: space-between;
+        }
 
 
         &_bonus {
@@ -504,9 +558,17 @@
 .steam-login {
     margin: 40px 0;
 
+    @include mobile {
+        margin-top: 60px;
+    }
+
     &__block {
         display: flex;
         gap: 20px;
+
+        @include netbook {
+            flex-direction: column;
+        }
     }
 
     &__form {
@@ -517,6 +579,11 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+
+        @include mobile {
+            background: transparent;
+            padding: 0;
+        }
 
         &_group {
             position: relative;
@@ -553,6 +620,10 @@
                 color: white;
                 border: 1px solid $orange;
             }
+
+            @include mobile {
+                padding: 8px 12px;
+            }
         }
 
         &_svg {
@@ -574,6 +645,11 @@
             gap: 10px;
             margin-top: 0px;
             margin-bottom: 20px;
+
+            @include mobile {
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+            }
         }
 
         &_radio {
@@ -605,6 +681,10 @@
                     color: white;
                     border-color: $orange;
                 }
+
+                @include mobile {
+                    padding: 12px;
+                }
             }
         }
     }
@@ -615,6 +695,15 @@
         border-radius: 10px;
         background: #1A1917;
         padding: 10px;
+
+        @include netbook {
+            max-width: 100%;
+        }
+
+        @include mobile {
+            background: transparent;
+            padding: 0;
+        }
 
         &_subtitle {
             font-size: 13px;
@@ -749,6 +838,11 @@
         justify-content: space-between;
         gap: 10px;
 
+        @include mobile {
+            width: 100%;
+            left: 0;
+        }
+
         &::before {
             content: "";
             display: flex;
@@ -819,6 +913,12 @@
 
     .swiper-slide {
         max-width: 240px;
+    }
+
+    .swiper {
+        @include netbook {
+            overflow: visible;
+        }
     }
 
     &__title {
