--- a/src/assets/scss/pages/_basket.scss
+++ b/src/assets/scss/pages/_basket.scss
@@ -143,6 +143,7 @@
             width: 100%;
             display: flex;
             gap: 10px;
+            margin: auto;
 
             @include netbook {
                 flex-direction: column;
@@ -161,6 +162,14 @@
 
             @include netbook {
                 font-size: 20px;
+            }
+
+            @include mobile {
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
         }
 
@@ -216,6 +225,12 @@
                 align-items: center;
                 flex-wrap: wrap;
                 justify-content: flex-end;
+            }
+
+            @include mobile {
+                position: inherit;
+                width: 100%;
+                justify-content: space-between;
             }
         }
 
@@ -673,6 +688,14 @@
 
                 &_item {
                     max-width: 130px;
+                }
+
+                @include mobile {
+                    max-width: 110px;
+
+                    &_item {
+                        max-width: 110px;
+                    }
                 }
             }
 
@@ -1182,5 +1205,85 @@
         height: 1px;
         background: #141413;
         border-bottom: 1px solid #22221F;
+    }
+}
+
+.basket-none {
+    &__block {
+        width: 100%;
+        max-width: 680px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        position: relative;
+        overflow: hidden;
+    }
+
+    &__img {
+        width: 100%;
+        max-width: 680px;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+    }
+
+    &__content {
+        margin: 300px 0;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        z-index: 2;
+
+        @include mobile {
+            margin: 200px 0;
+        }
+    }
+
+    &__title {
+        font-size: 32px;
+        font-weight: 500;
+        line-height: 1.2;
+        margin-bottom: 8px;
+
+        @include mobile {
+            font-size: 22px;
+        }
+    }
+
+    &__subtitle {
+        font-size: 16px;
+        color: $text-dark;
+        margin-bottom: 20px;
+
+        @include mobile {
+            font-size: 14px;
+        }
+    }
+
+    &__btn {
+        font-size: 20px;
+        color: $text-dark;
+        padding: 15px 45px;
+        line-height: 1;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        border-radius: 10px;
+        background: #2A2724;
+        justify-content: center;
+
+        @include mobile {
+            font-size: 16px;
+            padding: 12px 35px;
+        }
+
+        svg {
+            height: 34px;
+        }
     }
 }
